--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/home/kevin/repo/functional/lib/guava-r09.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
